Rename elasticsearch namespace to elastic for consistency
- Update all elasticsearch component files to use 'elastic' namespace
- Change component labels from 'elasticsearch' to 'elastic'
- Fix cert-manager to use extraLabels instead of commonLabels
- Remove hacky fallback namespace detection logic

This provides consistent naming: 'elastic' namespace contains both
Elasticsearch and Kibana services as one logical component.

--- a/software/components/certs/manager/release.yaml
+++ b/software/components/certs/manager/release.yaml
@@ -22,7 +22,7 @@ spec:
   values:
     installCRDs: true
     # Add HostK8s labels for component visibility
-    commonLabels:
+    extraLabels:
       hostk8s.component: cert-manager
     resources:
       limits:
