--- a/software/components/elasticsearch/cluster/elastic-user-vault-secret.yaml
+++ b/software/components/elasticsearch/cluster/elastic-user-vault-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: elasticsearch-es-elastic-user-vault
-  namespace: elasticsearch
+  namespace: elastic
 spec:
   refreshInterval: "0s"  # No refresh for dev environment
   secretStoreRef:
@@ -17,7 +17,7 @@ spec:
           eck.k8s.elastic.co/credentials: "true"
           eck.k8s.elastic.co/owner-kind: Elasticsearch
           eck.k8s.elastic.co/owner-name: elasticsearch
-          eck.k8s.elastic.co/owner-namespace: elasticsearch
+          eck.k8s.elastic.co/owner-namespace: elastic
           elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
   data:
     - secretKey: elastic
