--- a/software/components/elasticsearch/cluster/external-secret.yaml
+++ b/software/components/elasticsearch/cluster/external-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: elasticsearch-credentials
-  namespace: elasticsearch
+  namespace: elastic
 spec:
   refreshInterval: "0s"  # No refresh for dev environment
   secretStoreRef:
