--- a/software/stacks/foundation/elastic/hostk8s.secrets.yaml
+++ b/software/stacks/foundation/elastic/hostk8s.secrets.yaml
@@ -2,11 +2,11 @@ apiVersion: hostk8s.io/v1
 kind: SecretContract
 metadata:
   name: foundation/elastic
-  namespace: elasticsearch
+  namespace: elastic
 spec:
   secrets:
     - name: elasticsearch-credentials
-      namespace: elasticsearch
+      namespace: elastic
       data:
         - key: elastic
           value: elastic
