--- a/software/components/elasticsearch/cluster/elasticsearch-ingress.yaml
+++ b/software/components/elasticsearch/cluster/elasticsearch-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: elasticsearch
-  namespace: elasticsearch
+  namespace: elastic
   labels:
     hostk8s.app: elasticsearch
   annotations:
