--- a/software/components/elasticsearch/cluster/elasticsearch.yaml
+++ b/software/components/elasticsearch/cluster/elasticsearch.yaml
@@ -2,7 +2,7 @@ apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
   name: elasticsearch
-  namespace: elasticsearch
+  namespace: elastic
   labels:
     hostk8s.component: elastic
   annotations:
