--- a/software/components/elasticsearch/kibana/kibana.yaml
+++ b/software/components/elasticsearch/kibana/kibana.yaml
@@ -2,7 +2,7 @@ apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
   name: kibana
-  namespace: elasticsearch
+  namespace: elastic
   labels:
     hostk8s.component: elastic
   annotations:
