--- a/software/components/elasticsearch/component.yaml
+++ b/software/components/elasticsearch/component.yaml
@@ -19,7 +19,7 @@ spec:
   timeout: 5m
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: flux-system-elastic
   path: ./software/components/elasticsearch/operator
   prune: true
   wait: true
@@ -46,7 +46,7 @@ spec:
   timeout: 10m
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: flux-system-elastic
   path: ./software/components/elasticsearch/cluster
   prune: true
   wait: true
@@ -73,7 +73,7 @@ spec:
   timeout: 5m
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: flux-system-elastic
   path: ./software/components/elasticsearch/kibana
   prune: true
   wait: true
