--- a/software/components/elasticsearch/kibana/kustomization.yaml
+++ b/software/components/elasticsearch/kibana/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - kibana.yaml
   - ingress.yaml
 
-commonLabels:
-  hostk8s.component: elasticsearch
-  component.hostk8s.io/role: kibana
+labels:
+  - pairs:
+      hostk8s.component: elastic
+      component.hostk8s.io/role: kibana
