--- a/software/components/certs/kustomization.yaml
+++ b/software/components/certs/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - component.yaml
 
-commonLabels:
+labels:
   hostk8s.component: certs
   component.hostk8s.io/type: foundation
   component.hostk8s.io/category: network
