--- a/software/components/elasticsearch/operator/kustomization.yaml
+++ b/software/components/elasticsearch/operator/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - source.yaml
   - release.yaml
 
-commonLabels:
+labels:
   hostk8s.component: elasticsearch
   component.hostk8s.io/role: operator
