--- a/software/components/istio/kustomization.yaml
+++ b/software/components/istio/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - gateway.yaml
   - certificate.yaml
 
-commonLabels:
+labels:
   hostk8s.component: istio
   component.hostk8s.io/type: foundation
   component.hostk8s.io/category: database
