--- a/software/stacks/foundation/elastic/app/kustomization.yaml
+++ b/software/stacks/foundation/elastic/app/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - namespace.yaml
   - test-job.yaml
 
-commonLabels:
+labels:
   hostk8s.stack: elastic
   hostk8s.app: test-data-loader
