fix: convert commonLabels to labels in kustomization.yaml files
- Updated all kustomization.yaml files to use labels with pairs structure
- Removes deprecation warnings from Flux kustomize-controller
- Follows current Kustomize best practices for label management

--- a/software/components/elasticsearch/kustomization.yaml
+++ b/software/components/elasticsearch/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - component.yaml
 
 labels:
-  hostk8s.component: elasticsearch
-  component.hostk8s.io/type: foundation
-  component.hostk8s.io/category: database
+- pairs:
+    hostk8s.component: elasticsearch
+    component.hostk8s.io/type: foundation
+    component.hostk8s.io/category: database
