--- a/software/components/certs/kustomization.yaml
+++ b/software/components/certs/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - component.yaml
 
 labels:
-  hostk8s.component: certs
-  component.hostk8s.io/type: foundation
-  component.hostk8s.io/category: network
+- pairs:
+    hostk8s.component: certs
+    component.hostk8s.io/type: foundation
+    component.hostk8s.io/category: network
