--- a/software/components/elasticsearch/operator/kustomization.yaml
+++ b/software/components/elasticsearch/operator/kustomization.yaml
@@ -6,5 +6,6 @@ resources:
   - release.yaml
 
 labels:
-  hostk8s.component: elasticsearch
-  component.hostk8s.io/role: operator
+- pairs:
+    hostk8s.component: elasticsearch
+    component.hostk8s.io/role: operator
