--- a/software/components/istio/kustomization.yaml
+++ b/software/components/istio/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - certificate.yaml
 
 labels:
-  hostk8s.component: istio
-  component.hostk8s.io/type: foundation
-  component.hostk8s.io/category: database
+- pairs:
+    hostk8s.component: istio
+    component.hostk8s.io/type: foundation
+    component.hostk8s.io/category: database
