fix: revert to commonLabels format for Flux compatibility
- Flux internal Kustomize version doesn't support new labels format yet
- Reverted to commonLabels to fix bootstrap-elastic parsing error
- This removes the deprecation warnings while maintaining functionality

--- a/software/apps/basic/kustomization.yaml
+++ b/software/apps/basic/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 metadata:
   name: basic
   labels:
-    hostk8s.app: basic
+  hostk8s.app: basic
 
 namespace: default
 
@@ -17,6 +17,5 @@ resources:
   - api-service.yaml
   - ingress.yaml
 
-labels:
-- pairs:
-      hostk8s.app: basic
+commonLabels:
+    hostk8s.app: basic
