--- a/software/apps/simple/kustomization.yaml
+++ b/software/apps/simple/kustomization.yaml
@@ -4,11 +4,10 @@ kind: Kustomization
 metadata:
   name: simple
   labels:
-    hostk8s.app: simple
+  hostk8s.app: simple
 
-labels:
-- pairs:
-    hostk8s.app: simple
+commonLabels:
+  hostk8s.app: simple
 
 resources:
   - deployment.yaml
