--- a/software/components/certs/issuer/kustomization.yaml
+++ b/software/components/certs/issuer/kustomization.yaml
@@ -5,6 +5,5 @@ resources:
   - issuer.yaml
   - lets-encrypt.yaml
 
-labels:
-- pairs:
-    hostk8s.component: certs
+commonLabels:
+  hostk8s.component: certs
