--- a/software/components/certs/kustomization.yaml
+++ b/software/components/certs/kustomization.yaml
@@ -4,8 +4,7 @@ kind: Kustomization
 resources:
   - component.yaml
 
-labels:
-- pairs:
-    hostk8s.component: certs
-    component.hostk8s.io/type: foundation
-    component.hostk8s.io/category: network
+commonLabels:
+  hostk8s.component: certs
+  component.hostk8s.io/type: foundation
+  component.hostk8s.io/category: network
