--- a/software/components/elasticsearch/kibana/kustomization.yaml
+++ b/software/components/elasticsearch/kibana/kustomization.yaml
@@ -5,7 +5,6 @@ resources:
   - kibana.yaml
   - ingress.yaml
 
-labels:
-- pairs:
-      hostk8s.component: elastic
-      component.hostk8s.io/role: kibana
+commonLabels:
+    hostk8s.component: elastic
+    component.hostk8s.io/role: kibana
