--- a/software/components/elasticsearch/kustomization.yaml
+++ b/software/components/elasticsearch/kustomization.yaml
@@ -4,8 +4,7 @@ kind: Kustomization
 resources:
   - component.yaml
 
-labels:
-- pairs:
-    hostk8s.component: elasticsearch
-    component.hostk8s.io/type: foundation
-    component.hostk8s.io/category: database
+commonLabels:
+  hostk8s.component: elasticsearch
+  component.hostk8s.io/type: foundation
+  component.hostk8s.io/category: database
