--- a/software/components/elasticsearch/operator/kustomization.yaml
+++ b/software/components/elasticsearch/operator/kustomization.yaml
@@ -5,7 +5,6 @@ resources:
   - source.yaml
   - release.yaml
 
-labels:
-- pairs:
-    hostk8s.component: elasticsearch
-    component.hostk8s.io/role: operator
+commonLabels:
+  hostk8s.component: elasticsearch
+  component.hostk8s.io/role: operator
