--- a/software/stacks/foundation/istio/kustomization.yaml
+++ b/software/stacks/foundation/istio/kustomization.yaml
@@ -4,6 +4,5 @@ kind: Kustomization
 resources:
   - stack.yaml
 
-labels:
-- pairs:
-    hostk8s.stack: istio
+commonLabels:
+  hostk8s.stack: istio
