feat: add Redis foundation stack
- Create foundation/redis stack for Redis + Redis Commander deployment
- Update Redis component to use foundation-specific Vault path
- Remove ExternalSecret from stack root to fix namespace dependency
- Configure proper GitRepository source reference

--- a/software/stacks/foundation/redis/stack.yaml
+++ b/software/stacks/foundation/redis/stack.yaml
@@ -16,7 +16,7 @@ spec:
   timeout: 5m
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: flux-system-redis
   path: ./software/components/redis
   prune: true
   wait: true
