--- a/software/components/postgres/pgadmin-deployment.yaml
+++ b/software/components/postgres/pgadmin-deployment.yaml
@@ -43,18 +43,6 @@ spec:
           value: "True"
         - name: PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED
           value: "False"
-        - name: SCRIPT_NAME
-          value: "/postgres"
-        - name: PGADMIN_CONFIG_PROXY_X_FOR_COUNT
-          value: "1"
-        - name: PGADMIN_CONFIG_PROXY_X_PROTO_COUNT
-          value: "1"
-        - name: PGADMIN_CONFIG_PROXY_X_HOST_COUNT
-          value: "1"
-        - name: PGADMIN_CONFIG_PROXY_X_PORT_COUNT
-          value: "1"
-        - name: PGADMIN_CONFIG_PROXY_X_PREFIX_COUNT
-          value: "1"
         resources:
           requests:
             memory: "256Mi"
@@ -64,14 +52,14 @@ spec:
             cpu: "250m"
         livenessProbe:
           httpGet:
-            path: /postgres/login
+            path: /login
             port: 5050
           initialDelaySeconds: 120
           periodSeconds: 30
           timeoutSeconds: 5
         readinessProbe:
           httpGet:
-            path: /postgres/login
+            path: /login
             port: 5050
           initialDelaySeconds: 90
           periodSeconds: 15
