fix: use valid email format for pgAdmin credentials
Change admin@hostk8s.local to admin@example.com to avoid pgAdmin validation error

--- a/software/stacks/foundation/postgres/hostk8s.secrets.yaml
+++ b/software/stacks/foundation/postgres/hostk8s.secrets.yaml
@@ -8,7 +8,7 @@ spec:
       namespace: hostk8s
       data:
         - key: email
-          value: admin@hostk8s.local
+          value: admin@example.com
         - key: password
           generate: password
           length: 12
