feat: reorganize Postgres to use postgres namespace
**Architecture Change: Component vs Stack Separation**

Components provide services, stacks create instances:
- Component: Provides PostgreSQL-as-a-Service (operator + pgAdmin in postgres namespace)
- Stack: Creates the databases it needs (also in postgres namespace)

**Changes:**
- Move CloudNativePG operator: hostk8s → postgres namespace
- Move pgAdmin: hostk8s → postgres namespace
- Move PostgreSQL clusters: app namespaces → postgres namespace
- Update secret paths: hostk8s/pgadmin4-credentials → postgres/pgadmin4-credentials
- Update service discovery: sample-app namespace → postgres namespace
- Configure pgAdmin with better logging

**Benefits:**
- Multiple databases per stack (stack A can create blog-db + analytics-db)
- Centralized PostgreSQL management in postgres namespace
- Auto-discovery: pgAdmin sees all databases since co-located
- Clean separation: infrastructure vs. data instances
- Matches Redis pattern: redis namespace for Redis + Redis Commander

--- a/software/components/postgres/external-secret.yaml
+++ b/software/components/postgres/external-secret.yaml
@@ -6,7 +6,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: pgadmin4-credentials
-  namespace: hostk8s
+  namespace: postgres
   labels:
     hostk8s.io/managed: "true"
     hostk8s.io/contract: "sample-app"
@@ -21,9 +21,9 @@ spec:
   data:
   - secretKey: email
     remoteRef:
-      key: hostk8s/pgadmin4-credentials
+      key: postgres/pgadmin4-credentials
       property: email
   - secretKey: password
     remoteRef:
-      key: hostk8s/pgadmin4-credentials
+      key: postgres/pgadmin4-credentials
       property: password
