--- a/software/stacks/foundation/postgres/hostk8s.secrets.yaml
+++ b/software/stacks/foundation/postgres/hostk8s.secrets.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   secrets:
     - name: pgadmin4-credentials
-      namespace: hostk8s
+      namespace: postgres
       data:
         - key: email
           value: admin@example.com
