--- a/software/stacks/sample-app/manifests/database.yaml
+++ b/software/stacks/sample-app/manifests/database.yaml
@@ -3,7 +3,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: voting-db
-  namespace: sample-app
+  namespace: postgres
 spec:
   # Single instance for development
   instances: 1
