--- a/software/stacks/sample-app/manifests/external-secrets-app.yaml
+++ b/software/stacks/sample-app/manifests/external-secrets-app.yaml
@@ -6,7 +6,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: postgres-credentials
-  namespace: sample-app
+  namespace: postgres
   labels:
     hostk8s.io/managed: "true"
     hostk8s.io/contract: "sample-app"
