--- a/software/components/postgres/pgadmin-ingress.yaml
+++ b/software/components/postgres/pgadmin-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: pgadmin4-ingress
-  namespace: hostk8s
+  namespace: postgres
   labels:
     hostk8s.component: postgres
     hostk8s.type: management-ui
