--- a/software/stacks/sample-app/hostk8s.secrets.yaml
+++ b/software/stacks/sample-app/hostk8s.secrets.yaml
@@ -6,18 +6,18 @@ spec:
   secrets:
     # PostgreSQL database credentials for voting app
     - name: postgres-credentials
-      namespace: sample-app
+      namespace: postgres
       data:
         - key: username
           value: postgres
         - key: database
           value: voting
         - key: host
-          value: voting-db-rw.sample-app.svc.cluster.local
+          value: voting-db-rw.postgres.svc.cluster.local
         - key: port
           value: "5432"
         - key: url
-          value: "postgresql://postgres@voting-db-rw.sample-app.svc.cluster.local:5432/voting"
+          value: "postgresql://postgres@voting-db-rw.postgres.svc.cluster.local:5432/voting"
     # Redis Commander web UI credentials
     - name: redis-commander-credentials
       namespace: redis
