--- a/software/stacks/sample-app/manifests/worker-deployment.yaml
+++ b/software/stacks/sample-app/manifests/worker-deployment.yaml
@@ -28,7 +28,7 @@ spec:
         - name: REDIS_PORT
           value: "6379"
         - name: POSTGRES_HOST
-          value: "voting-db-rw.sample-app.svc.cluster.local"
+          value: "voting-db-rw.postgres.svc.cluster.local"
         - name: POSTGRES_USER
           value: "postgres"
         - name: POSTGRES_DB
