feat: add Postgres foundation stack storage contract
**Foundation Stack = Service Provider Pattern**

Foundation stacks now provide both compute AND storage infrastructure:

**Changes:**
- Add hostk8s.storage.yaml to foundation/postgres stack
- Create postgres-default storage class (5Gi, PostgreSQL optimized)
- Update sample-app database to use postgres-default storage class
- Remove duplicate PostgreSQL storage from sample-app storage contract

**Benefits:**
- DRY: Don't duplicate PostgreSQL storage setup across stacks
- Consistency: Foundation stack manages complete infrastructure
- Flexibility: Can add postgres-fast, postgres-bulk storage classes later
- Self-contained: Foundation stack provides secrets + storage + compute

**Pattern:**
- Component: Provides operator + management UI
- Foundation Stack: Provides infrastructure (secrets + storage + component)
- App Stacks: Use foundation infrastructure for their databases

--- a/software/stacks/sample-app/hostk8s.storage.yaml
+++ b/software/stacks/sample-app/hostk8s.storage.yaml
@@ -5,12 +5,4 @@ metadata:
   namespace: sample-app
 spec:
   directories:
-    # PostgreSQL database storage for voting application
-    - name: sample-app
-      path: /mnt/pv/sample-app
-      size: 5Gi
-      accessModes:
-        - ReadWriteOnce
-      storageClass: sample-app-database
-      owner: "999:999"          # PostgreSQL UID:GID in container
-      permissions: "777"         # Allow PostgreSQL to create pgdata subdirectory
+    # Note: PostgreSQL storage now provided by foundation/postgres stack
