--- a/software/components/postgres/pgadmin-deployment.yaml
+++ b/software/components/postgres/pgadmin-deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: pgadmin4
-        image: dpage/pgadmin4:8.11
+        image: dpage/pgadmin4:latest
         ports:
         - containerPort: 5050
           name: http
