feat: refactor sample-app to use foundation stack pattern
**Foundation Stack Pattern Implementation**

Follow the established foundation stack pattern like istio:

**Structure Changes:**
- Rename manifests/ → app/ directory (consistent with foundation/istio)
- Update stack.yaml to reference foundation stacks instead of deploying components
- Remove duplicate storage contract (foundation/postgres provides)
- Clean up infrastructure secrets (foundation stacks provide)

**New Architecture:**
1. **Foundation Infrastructure**: Reference foundation/redis + foundation/postgres
2. **Application**: Deploy voting app from app/ directory
3. **Dependencies**: App waits for foundation stacks to be ready

**Benefits:**
- Consistent with foundation stack pattern
- DRY: No duplicate infrastructure deployment
- Clean separation: foundation provides infrastructure, app provides business logic
- Simplified maintenance: foundation changes benefit all apps

**Stack Dependencies:**
- foundation-redis → Redis + Redis Commander
- foundation-postgres → PostgreSQL operator + pgAdmin + storage
- sample-app → Voting application (depends on foundations)

--- a/software/stacks/sample-app/hostk8s.secrets.yaml
+++ b/software/stacks/sample-app/hostk8s.secrets.yaml
@@ -18,21 +18,6 @@ spec:
           value: "5432"
         - key: url
           value: "postgresql://postgres@voting-db-rw.postgres.svc.cluster.local:5432/voting"
-    # Redis Commander web UI credentials
-    - name: redis-commander-credentials
-      namespace: redis
-      data:
-        - key: username
-          value: admin
-        - key: password
-          generate: password
-          length: 12
-    # pgAdmin4 web UI credentials
-    - name: pgadmin4-credentials
-      namespace: hostk8s
-      data:
-        - key: email
-          value: admin@hostk8s.dev
-        - key: password
-          generate: password
-          length: 16
+    # Note: Foundation stacks provide their own infrastructure secrets:
+    # - redis/redis-commander-credentials (foundation/redis)
+    # - postgres/pgadmin4-credentials (foundation/postgres)
