fix: update Redis foundation stack to use flux-system GitRepository
Fix GitRepository reference from flux-system-redis to flux-system to match
foundation stack pattern used by other stacks

--- a/software/stacks/foundation/redis/stack.yaml
+++ b/software/stacks/foundation/redis/stack.yaml
@@ -16,7 +16,7 @@ spec:
   timeout: 5m
   sourceRef:
     kind: GitRepository
-    name: flux-system-redis
+    name: flux-system
   path: ./software/components/redis
   prune: true
   wait: true
