feat: add sample-app storage contract for voting database
**Clarify Storage Responsibility:**

Foundation stacks provide:
- Infrastructure storage (pgAdmin data)
- Storage classes for reuse

Application stacks provide:
- Application-specific database storage
- Custom storage for app needs

**Changes:**
- Add hostk8s.storage.yaml for voting-db PostgreSQL cluster
- Create sample-app-voting-db storage class (5Gi, PostgreSQL optimized)
- Update database.yaml to use app-specific storage class

**Pattern:**
- Foundation: Provides storage infrastructure + reusable classes
- Application: Creates storage for their specific database instances

--- a/software/stacks/sample-app/app/database.yaml
+++ b/software/stacks/sample-app/app/database.yaml
@@ -51,7 +51,7 @@ spec:
   # Storage configuration - use storage contract
   storage:
     size: 5Gi
-    storageClass: postgres-default
+    storageClass: sample-app-voting-db
     pvcTemplate:
       accessModes:
         - ReadWriteOnce
