fix: add component dependency secrets to sample-app
When deploying components directly (not through foundation stacks),
the application stack must provide all secrets the components need:

- redis-commander-credentials (for Redis Commander UI)
- pgadmin4-credentials (for pgAdmin UI)
- postgres-credentials (for voting database)

This makes sample-app self-contained and able to deploy components directly.

--- a/software/stacks/sample-app/hostk8s.secrets.yaml
+++ b/software/stacks/sample-app/hostk8s.secrets.yaml
@@ -18,6 +18,21 @@ spec:
           value: "5432"
         - key: url
           value: "postgresql://postgres@voting-db-rw.postgres.svc.cluster.local:5432/voting"
-    # Note: Foundation stacks provide their own infrastructure secrets:
-    # - redis/redis-commander-credentials (foundation/redis)
-    # - postgres/pgadmin4-credentials (foundation/postgres)
+    # Redis Commander web UI credentials (component dependency)
+    - name: redis-commander-credentials
+      namespace: redis
+      data:
+        - key: username
+          value: admin
+        - key: password
+          generate: password
+          length: 12
+    # pgAdmin4 web UI credentials (component dependency)
+    - name: pgadmin4-credentials
+      namespace: postgres
+      data:
+        - key: email
+          value: admin@example.com
+        - key: password
+          generate: password
+          length: 12
