fix: sample app.

--- a/software/stacks/sample-app/hostk8s.secrets.yaml
+++ b/software/stacks/sample-app/hostk8s.secrets.yaml
@@ -32,7 +32,7 @@ spec:
       namespace: postgres
       data:
         - key: email
-          value: admin@example.com
+          value: admin@hostk8s.com
         - key: password
           generate: password
           length: 12
