fix: sample app.
Update PostgreSQL storage owner from 999:999 to 26:26 to match
CloudNativePG's PostgreSQL UID/GID requirements

--- a/software/stacks/sample-app/hostk8s.storage.yaml
+++ b/software/stacks/sample-app/hostk8s.storage.yaml
@@ -10,5 +10,5 @@ spec:
       size: 5Gi
       accessModes: ["ReadWriteOnce"]
       storageClass: sample-app-voting-db
-      owner: "999:999"  # PostgreSQL user/group
+      owner: "26:26"    # CloudNativePG PostgreSQL user/group
       permissions: "777"
