Add PostgreSQL database cluster to foundation/postgres stack
- Created app directory with database cluster definition
- Added namespace and kustomization for postgres-foundation app
- Updated stack.yaml to deploy both components and application
- Uses trust authentication and storage contracts for development

--- a/software/stacks/foundation/postgres/stack.yaml
+++ b/software/stacks/foundation/postgres/stack.yaml
@@ -20,3 +20,23 @@ spec:
   path: ./software/components/postgres
   prune: true
   wait: true
+
+---
+# Deploy the PostgreSQL application (database cluster)
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: postgres-app
+  namespace: flux-system
+spec:
+  interval: 10m
+  retryInterval: 1m
+  timeout: 10m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system-postgres
+  path: ./software/stacks/foundation/postgres/app
+  prune: true
+  wait: true
+  dependsOn:
+    - name: postgres-components
