--- a/software/components/postgres/kustomization.yaml
+++ b/software/components/postgres/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - source.yaml
   - release.yaml
   - external-secret.yaml
+  - pgadmin-servers-config.yaml
   - pgadmin-deployment.yaml
   - pgadmin-service.yaml
   - pgadmin-ingress.yaml
