--- a/software/stacks/foundation/postgres/hostk8s.storage.yaml
+++ b/software/stacks/foundation/postgres/hostk8s.storage.yaml
@@ -9,5 +9,5 @@ spec:
       size: 5Gi
       accessModes: ["ReadWriteOnce"]
       storageClass: postgres-default
-      owner: "999:999"  # PostgreSQL user/group
+      owner: "26:26"  # CloudNativePG PostgreSQL user/group
       permissions: "700"
