--- a/software/stacks/foundation/postgres/app/kustomization.yaml
+++ b/software/stacks/foundation/postgres/app/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - namespace.yaml
   - database.yaml
 
 # Generate ConfigMap with hash suffix for automatic restart on changes
@@ -12,12 +13,9 @@ configMapGenerator:
     options:
       disableNameSuffixHash: false
 
-# Patch pgAdmin deployment to include ConfigMap checksum for automatic restart
-patchesStrategicMerge:
-  - pgadmin-patch.yaml
-
 # The configMapGenerator will automatically create a hash suffix
-# and kustomize will update references in the deployment
+# When the ConfigMap content changes, the hash changes, and any deployment
+# referencing it will be updated by Flux automatically
 
 commonLabels:
   hostk8s.stack: postgres
