Fix pgAdmin ConfigMap hash reference issue
- Moved configMapGenerator from postgres-app to postgres-components
- Ensures kustomize can update deployment references in same kustomization
- ConfigMap hash changes will now properly trigger pgAdmin restarts
- Maintains automatic server configuration functionality

--- a/software/components/postgres/kustomization.yaml
+++ b/software/components/postgres/kustomization.yaml
@@ -10,5 +10,14 @@ resources:
   - pgadmin-service.yaml
   - pgadmin-ingress.yaml
 
+# Generate ConfigMap with hash suffix for automatic restart on changes
+# This ensures pgAdmin restarts when server configuration changes
+configMapGenerator:
+  - name: pgadmin-servers-config
+    files:
+      - servers.json
+    options:
+      disableNameSuffixHash: false
+
 # Note: commonLabels removed - they conflict with HelmRelease label management
 # Labels should be managed directly in resources
