Implement ConfigMap hash injection for automatic pgAdmin restarts
- Added kustomize replacements to inject ConfigMap resourceVersion into deployment
- Added annotation placeholder to pgAdmin deployment template
- Enables cross-kustomization restart triggers when ConfigMap changes
- Maintains pure GitOps approach without external dependencies

--- a/software/components/postgres/pgadmin-deployment.yaml
+++ b/software/components/postgres/pgadmin-deployment.yaml
@@ -19,6 +19,8 @@ spec:
         app: pgadmin4
         component: management-ui
         hostk8s.component: postgres
+      annotations:
+        hostk8s.configmap/hash: "placeholder"
     spec:
       containers:
       - name: pgadmin4
