Add pgAdmin servers override for sample-app voting database
- Created pgadmin-servers-patch.yaml to override component's default servers.json
- Configures pgAdmin to show 'Voting Database' pointing to voting-db-rw
- Uses strategic merge patch to override ConfigMap content
- Demonstrates stack-specific customization of shared components

--- a/software/stacks/sample-app/app/kustomization.yaml
+++ b/software/stacks/sample-app/app/kustomization.yaml
@@ -16,5 +16,9 @@ resources:
   - worker-deployment.yaml
   - voting-ingress.yaml
 
+# Override pgAdmin server configuration to show voting-db instead of default
+patchesStrategicMerge:
+  - pgadmin-servers-patch.yaml
+
 commonLabels:
   hostk8s.app: sample-app
